Documentation for affine diffusions

--- a/docs/models.lyx
+++ b/docs/models.lyx
@@ -89,79 +89,6 @@ Stochastic diffusion models
 \end_layout
 
 \begin_layout Subsection
-Generic model
-\end_layout
-
-\begin_layout Standard
-Given the generic continuous-time diffusion model
-\begin_inset Formula 
-\[
-dY_{t}=\mu\left(Y_{t},\theta_{0}\right)dt+\sigma\left(Y_{t},\theta_{0}\right)dW_{t}
-\]
-
-\end_inset
-
-we can discretize it as
-\begin_inset Formula 
-\[
-Y_{t}\approx Y_{t-h}+\mu\left(Y_{t-h},\theta_{0}\right)h+\sigma\left(Y_{t-h},\theta_{0}\right)\sqrt{h}\varepsilon_{t}.
-\]
-
-\end_inset
-
-To be more precise, we can integrate the diffusion on the interval 
-\begin_inset Formula $\left[t,t+h\right]$
-\end_inset
-
-:
-\begin_inset Formula 
-\[
-y_{t,t+h}=Y_{t+h}-Y_{t}=\int_{t}^{t+h}dY_{s}=\int_{t}^{t+h}\mu\left(Y_{s},\theta_{0}\right)ds+\int_{t}^{t+h}\sigma\left(Y_{s},\theta_{0}\right)dW_{s}.
-\]
-
-\end_inset
-
-Conditional mean and variance are thus
-\begin_inset Formula 
-\begin{eqnarray*}
-E_{t}\left[y_{t,t+h}\right] & = & E_{t}\left[\int_{t}^{t+h}\mu\left(Y_{s},\theta_{0}\right)ds\right],\\
-V_{t}\left[y_{t,t+h}\right] & = & E_{t}\left[\int_{t}^{t+h}\sigma^{2}\left(Y_{s},\theta_{0}\right)ds\right].
-\end{eqnarray*}
-
-\end_inset
-
-Hence, the moment function is
-\begin_inset Formula 
-\[
-g\left(y_{t,t+h};\theta\right)=\left[\begin{array}{c}
-y_{t,t+h}-\int_{t}^{t+h}\mu\left(Y_{s},\theta_{0}\right)ds\\
-y_{t,t+h}^{2}-\int_{t}^{t+h}\sigma^{2}\left(Y_{s},\theta_{0}\right)ds-\left(\int_{t}^{t+h}\mu\left(Y_{s},\theta_{0}\right)ds\right)^{2}
-\end{array}\right],
-\]
-
-\end_inset
-
-with
-\begin_inset Formula 
-\[
-E_{t}\left[g\left(y_{t,t+h};\theta\right)\right]=0.
-\]
-
-\end_inset
-
-Suppose that the moment function can be represented as a distributed lag
- function
-\begin_inset Formula 
-\[
-g\left(y_{t,t+h};\theta\right)=A\left(L\right)y_{t,t+h}=\sum_{j=0}^{L}a_{l}y_{t-hj,t+h-hj}.
-\]
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Subsection
 Affine Diffusion
 \end_layout
 
@@ -255,6 +182,71 @@ A characteristic
 \end_layout
 
 \begin_layout Subsection
+Discretization and moments
+\end_layout
+
+\begin_layout Standard
+We can discretize the model as
+\begin_inset Formula 
+\[
+Y_{t}\approx Y_{t-h}+\mu\left(Y_{t-h},\theta_{0}\right)h+\sigma\left(Y_{t-h},\theta_{0}\right)\sqrt{h}\varepsilon_{t}.
+\]
+
+\end_inset
+
+To be more precise, we can integrate the diffusion on the interval 
+\begin_inset Formula $\left[t,t+h\right]$
+\end_inset
+
+:
+\begin_inset Formula 
+\[
+y_{t,t+h}=Y_{t+h}-Y_{t}=\int_{t}^{t+h}dY_{s}=\int_{t}^{t+h}\mu\left(Y_{s},\theta_{0}\right)ds+\int_{t}^{t+h}\sigma\left(Y_{s},\theta_{0}\right)dW_{s}.
+\]
+
+\end_inset
+
+Conditional mean and variance are thus
+\begin_inset Formula 
+\begin{eqnarray*}
+E_{t}\left[y_{t,t+h}\right] & = & E_{t}\left[\int_{t}^{t+h}\mu\left(Y_{s},\theta_{0}\right)ds\right],\\
+V_{t}\left[y_{t,t+h}\right] & = & E_{t}\left[\int_{t}^{t+h}\sigma^{2}\left(Y_{s},\theta_{0}\right)ds\right].
+\end{eqnarray*}
+
+\end_inset
+
+Hence, the moment function is
+\begin_inset Formula 
+\[
+g\left(y_{t,t+h};\theta\right)=\left[\begin{array}{c}
+y_{t,t+h}-\int_{t}^{t+h}\mu\left(Y_{s},\theta_{0}\right)ds\\
+y_{t,t+h}^{2}-\int_{t}^{t+h}\sigma^{2}\left(Y_{s},\theta_{0}\right)ds-\left(\int_{t}^{t+h}\mu\left(Y_{s},\theta_{0}\right)ds\right)^{2}
+\end{array}\right],
+\]
+
+\end_inset
+
+with
+\begin_inset Formula 
+\[
+E_{t}\left[g\left(y_{t,t+h};\theta\right)\right]=0.
+\]
+
+\end_inset
+
+Suppose that the moment function can be represented as a distributed lag
+ function
+\begin_inset Formula 
+\[
+g\left(y_{t,t+h};\theta\right)=A\left(L\right)y_{t,t+h}=\sum_{j=0}^{L}a_{l}y_{t-hj,t+h-hj}.
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
 Geometric Brownian Motion
 \end_layout
 
@@ -309,7 +301,7 @@ K_{0}=\mu-\frac{1}{2}\sigma^{2},\quad K_{1}=0,\quad H_{0}=\sigma^{2},\quad H_{1}
 Exact solution
 \end_layout
 
-\begin_layout Example
+\begin_layout Standard
 The solution is
 \begin_inset Formula 
 \[
